--- a/video5/style.css
+++ b/video5/style.css
@@ -4,3 +4,29 @@ td{
 body{
     background-color: aqua;
 }
+div{
+    border: 4px solid black;
+    box-shadow: 3px 6px 9px;
+}
+div:hover{
+    background-color: red;
+    border-radius: 19px;
+}
+div{
+    width: 80vw;
+    min-height: 20vh;
+}
+img{
+    width: 80vw;
+    height: 25vh;
+border-radius: 19px;
+
+}
+table::selection{
+    background-color: black;
+    color: red;
+}
+table:hover{
+    background-color: bisque;
+    color: red;
+}
